--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
             </div>
             <div class="profile-picture">
-               <img data-testid="slackDisplayImage" style="width: 100%;" src="img/Abbymaribe-profile-picture.jpg" alt="abbymaribe"> 
+               <img data-testid="slackDisplayImage" style="width: 100%;" src="img/Abbymaribe-profile-picture.jpg" alt="abbymaribe" loading="lazy"> 
             </div>
         </div> 
     </div>
@@ -36,7 +36,7 @@
             <h3 data-testid="currentUTCTime" id="timeinUTC"></h3>
         </div>
         <div class="github">
-            <p>Find an issue with this page? <a data-testid=“githubURL” href="https://github.com/WairimuAbigaelWairimu/HNGintershipTask1.git">Fix it on Github</a></p>
+            <p>Find an issue with this page? <a data-testid=“githubURL” href="https://github.com/WairimuAbigaelWairimu/HNGintershipTask1">Fix it on Github</a></p>
         </div>
     </nav>
 <script src="script.js"></script>    
