--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="name">
                 <h4>Hello there, my name is</h4>
-                <h1 data-testid="slackDisplayImage" class="gradient-text">Abby Maribe</h1>
+                <h1 data-testid="slackUserName" class="gradient-text">Abby Maribe</h1>
                 <h2 data-testid="myTrack" >Front-end developer</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime modi voluptas architecto, sed iste iusto ipsam possimus qui? Nisi nam voluptatem perferendis laboriosam ipsa esse vel sed quidem ullam corrupti?</p>
                 <div class="icons">
